--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -59,7 +59,7 @@
         "page_title": "Confirm the code",
         "title": "Please, check your email!!",
         "subtitle": "We send a email to",
-        "success": "Success! You can Sign In now!!",
+        "success": "Success!",
         "success_resend": "Success! Check your email!",
         "do_not_receive": "Do not receive the code?",
         "resend": "Resend"
