--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -59,7 +59,7 @@
         "page_title": "Confirme o código",
         "title": "Por favor, cheque seu email!!",
         "subtitle": "Nós enviamos um email para",
-        "success": "Sucesso! Você pode entrar agora!!",
+        "success": "Sucesso!",
         "success_resend": "Sucesso! Cheque seu email!",
         "do_not_receive": "Não recebeu o código?",
         "resend": "Reenviar"
